# syslog-parser

./: Cargo.toml
migrations/2019-10-24-105400_entries/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
