[package]
name = "sys_parser"
version = "0.1.0"
authors = ["wbglaeser <ben.glaeser@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.1"
lazy_static = "1.4.0"
diesel = { version = "1.3.0", features = ["postgres", "chrono"]} 
dotenv = "0.15.0"
chrono = "0.4.9"
failure = "0.1.6"
log = "0.4.8"
pretty_env_logger = "0.3.1"
